# pygame-gridcalculator

./: LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  python-package.yml  python-publish.yml
examples/: grid_display_example.py  grid_resize_example.py  multiple_grids_example.py  shapefactory_example.py  snake_example.py
pygame_gridcalculator/: __init__.py  gridcalculator.py  shapefactory.py
src/: exceptions.py  grid_calculator.py  pygame_gridcalculator.py
test/: manual_tests.py  test_grid_calculator.py  test_gridcalculator.py  test_shapefactory.py
