[metadata]
name = pygame-gridcalculator
version = 1.0.0
author = Dave Harding
author_email = dave@punkamania.org
description = For generating a grid to map pixels against for a pygame display.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davethepunkyone/pygame-gridcalculator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: miT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = False
