[metadata]
name = pygame-gridcalculator
version = 2.0.0
author = Dave Harding
author_email = dave@punkamania.org
description = For generating a virtual grid to map pixels against and generate shapes from for a pygame display.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davethepunkyone/pygame-gridcalculator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: pygame
    Development Status :: 5 - Production/Stable

[options]
packages = find:
python_requires = >=3.8
include_package_data = False
install_requires =
    pygame>=2.1.2
